# trash-box

./: CMakeLists.txt  README.md
Other/: mou.cpp
Other/mou/: mou.cpp
Other/mou2/: mou2.cpp
Other/mou3/: CMakeLists.txt  mou.cpp
gold/: .#mowlawn.cpp  mowlawn.cpp~
gold/OPEN11/: mowlawn.cpp
gold/OPEN11/mowlawn/: mowlawn.out
gold/dec12/gangs/: CMakeLists.txt  main.cpp
gold/dec16/checklist/: CMakeLists.txt  main.cpp
gold/dec16/lasers/src/: Main.java
gold/dec16/lasers/src/com/company/: Main.java
gold/dec16/moocast/: CMakeLists.txt  main.cpp
gold/dec2017/piepie/: CMakeLists.txt
gold/feb08/: hotel.cpp~
gold/feb08/hotel/: hotel.cpp  hotel.out
gold/jan13/seating/: CMakeLists.txt  seating.cpp
gold/mar10/balloc/: CMakeLists.txt  main.cpp
silver/: xoinc.cpp~
silver/nov09/: xoinc.out
silver/nov09/xoinc/: xoinc.cpp
